src/objects/BGBL__Applied_Query__c.object
<CustomObject>
    <description>Queries required by letter including any unique instructions eg. order, parent query and attach</description>
    <fields>
        <fullName>BGBL__Attachment_To_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This assigned query object is the object the letter will attach to</inlineHelpText>
        <label>Attach</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGBL__Batch_Letter__c</fullName>
        <label>Letter</label>
        <referenceTo>BGBL__Batch_Letter__c</referenceTo>
        <relationshipLabel>Applied Letter Queries</relationshipLabel>
        <relationshipName>Applied_Queries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BGBL__Child_Iterate_Query__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>if true, each record returned by this query will result in a letter copy</inlineHelpText>
        <label>Child Iterate Query</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGBL__Execution_Order__c</fullName>
        <inlineHelpText>Required. query order of 1 is reserved for the primary query whose object can be attached the letter.</inlineHelpText>
        <label>Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BGBL__Iterate_Parent_Lookup__c</fullName>
        <description>Field API Name of the lookup to the primary parent (record being attached to).</description>
        <inlineHelpText>Field API Name of the lookup to the primary parent (record being attached to).</inlineHelpText>
        <label>Iterate Parent Lookup</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBL__Object_Name_Alias__c</fullName>
        <inlineHelpText>Use when querying against the same object more than once.  For example, all Accounts are queried for address, but a specific Account is also queried to provide your organization&apos;s information for all letters (e.g., return address):  this field = &quot;MyOrg&quot;</inlineHelpText>
        <label>Object Name (Alias)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBL__Object_Name_Plural__c</fullName>
        <inlineHelpText>The parent&apos;s relationship name to this assigned query object. For custom fields, ensure to include pre &quot;MUSW__&quot; and postfix &quot;__r&quot;. eg. MUSW__listname__r. For standard objects use plural name, eg Tasks</inlineHelpText>
        <label>Object Name (Plural)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBL__Parent_Query__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Query</label>
        <referenceTo>BGBL__Query__c</referenceTo>
        <relationshipName>Children_Queries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBL__Parent_Record_Type_Name__c</fullName>
        <description>Parent RecordType name. Useful when recordtypes are distinct from one another, and configured letters do not make sense for other record types.</description>
        <inlineHelpText>Name of the record type on the parent record that this letter applies to. Only applicable on the primary applied query. Only impacts list of letters on manual request page. If blank, letter is available for all record types.</inlineHelpText>
        <label>Parent Record Type Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBL__Query__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Query</label>
        <referenceTo>BGBL__Query__c</referenceTo>
        <relationshipName>Applied_Queries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBL__Select_Fields__c</fullName>
        <inlineHelpText>Field values to display when user chooses Iterate letter (letter with multiple copies). This field is case-sensitive and its values must be identical to the field API names. eg. MUSW__Contact__r.Name, MUSW__Contact__r.MailingStreet</inlineHelpText>
        <label>Child Select Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BGBL__Track_No__c</fullName>
        <externalId>true</externalId>
        <label>Tracking Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Letter Applied Query</label>
    <nameField>
        <displayFormat>AQ-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applied Letter Queries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BGBL__Attachment_Save_batch_letter_required</fullName>
        <active>true</active>
        <description>Either Attach on first query or Save Batch file must be true when not an iterate query</description>
        <errorConditionFormula>ISPICKVAL(BGBL__Execution_Order__c, &quot;1&quot;) &amp;&amp;  BGBL__Child_Iterate_Query__c == false &amp;&amp; BGBL__Attachment_To_Object__c  == false &amp;&amp;  BGBL__Batch_Letter__r.BGBL__Save_Batch_Letter__c == false</errorConditionFormula>
        <errorMessage>Must Attach in applied query or Save Batch Letter</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BGBL__Child_Iterate_Query_must_be_1</fullName>
        <active>true</active>
        <errorConditionFormula>AND(BGBL__Child_Iterate_Query__c ,  NOT(ISPICKVAL(BGBL__Execution_Order__c,&apos;1&apos;) ))</errorConditionFormula>
        <errorMessage>Child Iterate Query must be specified as Order 1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BGBL__Child_Iterate_Query_must_not_have_parent</fullName>
        <active>true</active>
        <errorConditionFormula>AND(BGBL__Child_Iterate_Query__c , NOT(ISBLANK(BGBL__Parent_Query__c )))</errorConditionFormula>
        <errorMessage>This is a Child Iterate Query, do not specify Parent Query</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BGBL__Order_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(BGBL__Execution_Order__c, &quot;&quot;)</errorConditionFormula>
        <errorMessage>Order is Required. Please indicate order in which this query should be run. If no other queries, indicate 1. If more than one, make sure each applied query is uniquely ordered (parents are first).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BGBL__Parent_Query_without_relationship_name</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(ISBLANK(BGBL__Parent_Query__c )),ISBLANK( BGBL__Object_Name_Plural__c  ))</errorConditionFormula>
        <errorDisplayField>BGBL__Object_Name_Plural__c</errorDisplayField>
        <errorMessage>Object Name (Plural) is Required when Parent Query is specified. Eg. MUSW__Fees__r</errorMessage>
    </validationRules>
</CustomObject>